@@ -54,6 +54,8 @@ import processing.core.PConstants;
 import processing.data.StringList;
 import processing.data.XML;
 import processing.mode.java.pdex.SourceUtils;
+import processing.mode.java.pdex.util.runtime.RuntimeConst;
+import processing.mode.java.pdex.util.runtime.strategy.JavaFxRuntimePathFactory;
 import processing.mode.java.preproc.PdePreprocessor;
 import processing.mode.java.preproc.PreprocessorResult;
 import processing.mode.java.preproc.SurfaceInfo;
@@ -801,10 +803,10 @@ public class JavaBuild {
     if (exportPlatform == PConstants.MACOSX) {
       dotAppFolder = new File(destFolder, sketch.getName() + ".app");
 
-      File contentsOrig = new File(Platform.getJavaHome(), "../../../../..");
+      File contentsOrig = new File(Platform.getJavaHome(), "../../../..");
 
       if (embedJava) {
-        File jdkFolder = new File(Platform.getJavaHome(), "../../..");
+        File jdkFolder = new File(Platform.getJavaHome(), "../..");
         String jdkFolderName = jdkFolder.getCanonicalFile().getName();
         jvmRuntime = "<key>JVMRuntime</key>\n    <string>" + jdkFolderName + "</string>";
         jdkPath = new File(dotAppFolder, "Contents/PlugIns/" + jdkFolderName).getAbsolutePath();
@@ -959,7 +961,6 @@ public class JavaBuild {
       }
     }
 
-
     /// create platform-specific CLASSPATH based on included jars
 
     String exportClassPath = null;
@@ -988,19 +989,6 @@ public class JavaBuild {
     }
     // https://github.com/processing/processing/issues/2239
     runOptions.append("-Djna.nosys=true");
-    // https://github.com/processing/processing/issues/4608
-    /*if (embedJava) {
-      // if people don't embed Java, it might be a mess, but what can we do?
-      if (exportPlatform == PConstants.MACOSX) {
-        runOptions.append("-Djava.ext.dirs=$APP_ROOT/Contents/PlugIns/jdk" +
-                          PApplet.javaVersionName +
-                          ".jdk/Contents/Home/jre/lib/ext");
-      } else if (exportPlatform == PConstants.WINDOWS) {
-        runOptions.append("-Djava.ext.dirs=\"%EXEDIR%\\java\\lib\\ext\"");
-      } else if (exportPlatform == PConstants.LINUX) {
-        runOptions.append("-Djava.ext.dirs=\"$APPDIR/java/lib/ext\"");
-      }
-    }*/
 
     // https://github.com/processing/processing/issues/2559
     if (exportPlatform == PConstants.WINDOWS) {
